--- a/MessageInABottle/Views/Home/Index.cshtml
+++ b/MessageInABottle/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 
         </div>
     
-        <h4><span class="anotherbottle boundaries">A<span id="another"></span> mysterious bottle washes ashore...</span></h4>
+        <h4><span class="anotherbottle boundaries lightdark">A<span id="another"></span> mysterious bottle washes ashore...</span></h4>
     
         <button class="btnstyles btn" data-toggle="modal" id="displayMessage">Pick up bottle</button>
         <br />
