--- a/MessageInABottle/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MessageInABottle/Views/Account/ExternalLoginConfirmation.cshtml
@@ -13,7 +13,7 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <p>
-                Please confrim your email to finish registering:
+                Please confirm your email to finish registering:
             </p>
             <div class="form-group">
                 @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
