--- a/MessageInABottle/Views/Shared/_Layout.cshtml
+++ b/MessageInABottle/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
         <footer class="footer">
             <center>
-                <p class="footertext">Please share if you enjoyed!</p>
+                <p><span class="footertext">Please share if you enjoyed!</span></p>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://messageinabottle.azurewebsites.net/" target="_blank"><i class="fa fa-facebook fbicon" style="font-size: 20px;"></i></a>
                 <a href="https://twitter.com/intent/tweet?url=https://messageinabottle.azurewebsites.net/&text=" target="_blank"><i class="fa fa-twitter twittericon" style="font-size: 20px;"></i></a>
             </center>
