--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -43,7 +43,7 @@
 
         <footer class="footer">
             <center>
-                <p style="margin-bottom: 5px;"><span class="footertext lightdark">Please share if you enjoyed!</span></p>
+                <p style="margin-bottom: 5px;"><span class="footertext">Please share if you enjoyed!</span></p>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://messageinabottle.azurewebsites.net/" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
                 <a href="https://twitter.com/intent/tweet?url=https://messageinabottle.azurewebsites.net/&text=" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
             </center>
