--- a/MessageInABottle/Views/Home/MyMessages.cshtml
+++ b/MessageInABottle/Views/Home/MyMessages.cshtml
@@ -14,7 +14,16 @@
         <hr style="margin-top:2px;margin-bottom:7px;" />
         foreach (var m in ViewBag.MyMessages)
         {
-            string status = "Seen " + m.Item2.ToString() + " time(s)";
+
+            string status = "Seen ";
+            if(m.Item2.ToString() == "1")
+            {
+                status = status + m.Item2.ToString() + " time";
+            }
+            else
+            {
+                status = status + m.Item2.ToString() + " times";
+            }
 
             if (m.Item3 == true)
             {
@@ -28,7 +37,7 @@
 
 
             <div class="row">
-                <div class="col-xs-8">@m.Item1</div>
+                <div class="col-xs-8">@Html.Raw(m.Item1)</div>
                 <div class="col-xs-4">@status</div>
             </div>
             <hr style="margin-top:3px;margin-bottom:3px;" />
